Content creation from EmbeddingMatch for various Retrievers and Aggregators